compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__converting_expr_to_pipeline.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\nimport list\n\nfn main() {\n  list.reverse(list.zip(list.reverse([1,2,3]), list.reverse([4,5,6])))\n}\n"
---

import list

fn main() {
  [1, 2, 3] 
  |> list.reverse()
  |> list.zip(list.reverse([4, 5, 6]))
  |> list.reverse()

}

