compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__pipeline_code_action_apply_pipeline_locally.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\nimport list\n\nfn main() {\n  list.reverse(list.reverse([1, 2, 3, 4, 5]))\n}\n\n"
---

import list

fn main() {
  list.reverse([1, 2, 3, 4, 5] 
               |> list.reverse()
)
}


