compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__pipeline_code_action_no_pipeline_for_empty_call_chain_as_part_of_pipeline.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\nimport list\n\npub fn main() {\n  list.reverse([1, 2, 3, 4, 5]\n               |> list.reverse())\n}\n"
---
No codeaction produced...
