compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__pipeline_code_action_no_pipeline_when_call_chain_not_bigger_than_one.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\nimport list\n\nfn main() {\n  list.reverse([1, 2, 3, 4, 5])\n}\n"
---
No codeaction produced, check if mark is hit...
