compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__pipeline_code_action_no_pipeline_when_no_call_chain.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\npub fn main() {\n  get_one()\n}\n\nfn get_one() -> Int{\n  1\n}\n\n"
---
No codeaction produced...
