compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__pipeline_action__pipeline_simple.snap
---
source: compiler-core/src/language_server/tests/pipeline_action.rs
expression: "\nimport list\n\nfn main() {\n  list.reverse([1, 2, 3, 4, 5])\n}\n"
---

import list

fn main() {
  [1, 2, 3, 4, 5] 
  |> list.reverse()

}

